--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -22,7 +22,12 @@ doctrine:
         dir: "%kernel.project_dir%/src/Entity"
         prefix: 'App\Entity'
         alias: App
-
+      Security:
+        is_bundle: false
+        type: attribute
+        dir: "%kernel.project_dir%/src/Security"
+        prefix: 'App\Security'
+        alias: Security
 when@test:
   doctrine:
     dbal:
